--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <body>
     <h3>Model: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf">https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf</a>
+
+    <h3>QT Plugin builds: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Builds.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Builds.zip</a>
 </body>
