Update QT Plugin builds link and add plugin code link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
     <h3>Model: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf">https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf</a>
 
-    <h3>QT Plugin builds: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Builds.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Builds.zip</a>
+    <h3>QT Plugin builds: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip</a>
+
+    <h3>QT Plugin Code: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/plugin-code/h2loop-assistant-release-dec-22.zip">https://storage.googleapis.com/h2loop_prod_downloads/plugin-code/h2loop-assistant-release-dec-22.zip</a>
 </body>
