Update QT Plugin builds section in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <body>
     <h3>Model: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf">https://storage.googleapis.com/h2loop_prod_downloads/models/h2loop-coder-30b-a3b-instruct-q5_k_m.gguf</a>
 
-    <h3>QT Plugin builds: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip</a>
+    <h3>QT Plugin builds (18.1): </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv2.zip</a>
+
+    <h3>QT Plugin builds (18.0): </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv3_18_0.zip">https://storage.googleapis.com/h2loop_prod_downloads/builds/Buildsv3_18_0.zip</a>
 
     <h3>QT Plugin Code: </h3> <a href="https://storage.googleapis.com/h2loop_prod_downloads/plugin-code/h2loop-assistant-release-dec-22.zip">https://storage.googleapis.com/h2loop_prod_downloads/plugin-code/h2loop-assistant-release-dec-22.zip</a>
 </body>
